--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
 <body>
     <div id="content"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.min.js"></script>
-    <script src="src/todoapp.js"></script>
+    <script src="public/build.min.js"></script>
 </body>
 </html>
