--- a/app/index.html
+++ b/app/index.html
@@ -6,5 +6,6 @@
     <div id="content"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.min.js"></script>
     <script src="public/build.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./main.css">
 </body>
 </html>
